--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bulma": "^0.8.1", 
+    "bulma": "^0.8.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "use-react-router": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
